<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark"
    android:backgroundTint="@android:color/holo_green_dark">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="cl.inacap.nuevohorizonte.MainActivity">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start" />


        <TextView

            android:id="@+id/etiqueta_factura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ingrese numero de factura"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_factura"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:backgroundTint="@android:color/background_light"
            android:inputType="number"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/etiqueta_monto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_monto"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_monto"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:backgroundTint="@android:color/background_light"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/etiqueta_fecha_recepcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_fecha_recepción"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_fecha_recepcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:clickable="true"
            android:focusable="false"
            android:hint="formato dd/mm/año" />

        <TextView
            android:id="@+id/etiqueta_fecha_vencimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Label_fecha_vencimiento"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_fecha_vencimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:clickable="true"
            android:focusable="false"
            android:hint="formato dd/mm/año" />

        <TextView
            android:id="@+id/etiqueta_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_usuario"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_usuario"
            android:layout_width="266dp"
            android:layout_height="50dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light"
            android:backgroundTint="@android:color/background_light"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_weight="0.00" />

        <TextView
            android:id="@+id/etiqueta_proveedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_proveedor"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_proveedor"
            android:layout_width="266dp"
            android:layout_height="50dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light"
            android:backgroundTint="@android:color/background_light"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_weight="0.00" />

        <TextView
            android:id="@+id/etiqueta_observacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Label_observaciones"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_observaciones"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_ingreso"
            android:layout_width="166dp"
            android:layout_height="50dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="50dp"
            android:layout_weight="0.01"
            android:backgroundTint="@android:color/background_light"
            android:gravity="center"
            android:text="Ingresar"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>